--- a/Ceriyo.Toolset/Components/TilesetEditorControl.xaml
+++ b/Ceriyo.Toolset/Components/TilesetEditorControl.xaml
@@ -15,9 +15,9 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="184*"></RowDefinition>
+            <RowDefinition Height="149*"></RowDefinition>
+            <RowDefinition Height="167*"></RowDefinition>
         </Grid.RowDefinitions>
 
         <ListBox Name="lbTilesets"
@@ -30,16 +30,17 @@
                  SelectionChanged="TilesetSelected"
                  Margin="0,27,0,41">
         </ListBox>
-        <Label Content="Tilesets:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+        <Label Content="Tilesets:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Height="26" Width="52"/>
         <TextBox Name="txtName"
                  Grid.Column="1" 
                  HorizontalAlignment="Left" 
                  Height="23" Margin="5,36,0,0" 
                  TextWrapping="Wrap" 
                  Text="{Binding Name}" 
+                 IsEnabled="{Binding Path=IsTilesetSelected}"
                  VerticalAlignment="Top" 
                  Width="135"/>
-        <Label Content="Name:" Grid.Column="1" HorizontalAlignment="Left" Margin="11,10,0,0" VerticalAlignment="Top"/>
+        <Label Content="Name:" Grid.Column="1" HorizontalAlignment="Left" Margin="11,10,0,0" VerticalAlignment="Top" Height="26" Width="44"/>
 
         <DockPanel Background="LightGray"
                Grid.Column="2"
@@ -60,36 +61,60 @@
                      HorizontalAlignment="Left" 
                      Margin="10,52,0,0" 
                      IsChecked="True"
-                     VerticalAlignment="Top"/>
+                     IsEnabled="{Binding IsTilesetSelected}"
+                     VerticalAlignment="Top" Height="16" Width="58"/>
         <RadioButton x:Name="radPassage4Direction"
         	Content="Passage (4 Dir)" 
         	Grid.Column="4" 
         	HorizontalAlignment="Left" 
+            IsEnabled="{Binding IsTilesetSelected}"
         	Margin="10,73,0,0" 
-        	VerticalAlignment="Top"/>
-        <TextBox Name="txtTag" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="5,90,0,0" TextWrapping="Wrap" Text="{Binding Tag}" VerticalAlignment="Top" Width="135"/>
-        <Label Content="Tag:" Grid.Column="1" HorizontalAlignment="Left" Margin="11,64,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="txtResref" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="5,144,0,0" TextWrapping="Wrap" Text="{Binding Resref}" VerticalAlignment="Top" Width="135"/>
-        <Label Content="Resref:" Grid.Column="1" HorizontalAlignment="Left" Margin="11,118,0,0" VerticalAlignment="Top"/>
-        <Button Content="New" 
+        	VerticalAlignment="Top" Height="16" Width="94"/>
+        <TextBox Name="txtTag" 
+                 Grid.Column="1" 
+                 HorizontalAlignment="Left" 
+                 Height="23" 
+                 Margin="5,90,0,0" 
+                 TextWrapping="Wrap" 
+                 Text="{Binding Tag}" 
+                 IsEnabled="{Binding IsTilesetSelected}"
+                 VerticalAlignment="Top" 
+                 Width="135"/>
+        <Label Content="Tag:" Grid.Column="1" HorizontalAlignment="Left" Margin="11,64,0,0" VerticalAlignment="Top" Height="26" Width="32"/>
+        <TextBox Name="txtResref" 
+                 Grid.Column="1" 
+                 HorizontalAlignment="Left" 
+                 Height="23" 
+                 Margin="5,144,0,0" 
+                 TextWrapping="Wrap" 
+                 Text="{Binding Resref}" 
+                 IsEnabled="{Binding IsTilesetSelected}"
+                 VerticalAlignment="Top" 
+                 Width="135"/>
+        <Label Content="Resref:" Grid.Column="1" HorizontalAlignment="Left" Margin="11,118,0,0" VerticalAlignment="Top" Height="26" Width="45"/>
+        <Button Name="btnNew"
+                Content="New" 
                 Click="New"
                 HorizontalAlignment="Left" 
                 Margin="10,0,0,10" 
                 Grid.Row="2" 
                 VerticalAlignment="Bottom" 
-                Width="52"/>
-        <Button Content="Delete" 
+                Width="52" Height="22"/>
+        <Button Name="btnDelete"
+                Content="Delete" 
                 Click="Delete"
                 HorizontalAlignment="Left" 
                 Margin="83,0,0,10" 
                 Grid.Row="2" 
                 VerticalAlignment="Bottom" 
-                Width="52"/>
+                IsEnabled="{Binding IsTilesetSelected}"
+                Width="52" Height="22"/>
         <ListBox x:Name="lbGraphics"
         	Grid.Column="2" 
         	HorizontalAlignment="Stretch" 
         	VerticalAlignment="Stretch" 
         	ItemsSource="{Binding Graphics}"
+            IsEnabled="{Binding IsTilesetSelected}"
         	DisplayMemberPath="Name"
         	Width="Auto" 
         	SelectionChanged="GraphicSelected"
