--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:frb="clr-namespace:Ceriyo.Toolset.FRBControl" xmlns:Comp="clr-namespace:Ceriyo.Toolset.Components" x:Class="Ceriyo.Toolset.MainWindow"
+        xmlns:frb="clr-namespace:Ceriyo.Toolset.FRBControl" 
+        xmlns:Comp="clr-namespace:Ceriyo.Toolset.Components" x:Class="Ceriyo.Toolset.MainWindow"
     Title="MainWindow" Height="600" Width="800" MinHeight="600" MinWidth="800"
     Closing="Window_Closing">
     <Grid>
