--- a/Ceriyo.Toolset/Components/TilesetEditorControl.xaml
+++ b/Ceriyo.Toolset/Components/TilesetEditorControl.xaml
@@ -52,7 +52,7 @@
             <ScrollViewer HorizontalScrollBarVisibility="Auto">
                 
                 <Grid Name="gridOverlay">
-
+                    
                     <Image Name="imgGraphic" 
                        Stretch="Fill"
                        Width="{Binding RelativeSource={RelativeSource Self}, Path=Source.PixelWidth}" 
@@ -62,8 +62,8 @@
 
                     </Image>
                     
-                    <Grid>
-                        <Grid.Background>
+                    <Canvas Name="cnvTileEditor">
+                        <Canvas.Background>
                             <DrawingBrush Viewport="0,0,64,32" ViewportUnits="Absolute" TileMode="Tile">
 
 
@@ -82,9 +82,9 @@
                                     </DrawingGroup>
                                 </DrawingBrush.Drawing>
                             </DrawingBrush>
-                        </Grid.Background>
+                        </Canvas.Background>
 
-                    </Grid>
+                    </Canvas>
                     
                     
                     
@@ -105,12 +105,14 @@
                      Margin="10,52,0,0" 
                      IsChecked="{Binding Path=TileEditMode, Converter={StaticResource EnumToBooleanConverter}, ConverterParameter={x:Static data:TileEditModeEnum.Passability}}"
                      IsEnabled="{Binding IsTilesetSelected}"
+                     Checked="ChangeTileMode"
                      VerticalAlignment="Top" Height="16" Width="58"/>
             <RadioButton x:Name="radPassage4Direction"
             	Content="Passage (4 Dir)" 
             	HorizontalAlignment="Left" 
             	IsEnabled="{Binding IsTilesetSelected}"
             	Margin="10,73,0,0" 
+                Click="ChangeTileMode"
             	VerticalAlignment="Top" Height="16" Width="94"/>
         </Grid>
         
