--- a/Ceriyo.Toolset/Components/TilesetEditorControl.xaml
+++ b/Ceriyo.Toolset/Components/TilesetEditorControl.xaml
@@ -84,6 +84,9 @@
                             </DrawingBrush>
                         </Canvas.Background>
 
+                        <Rectangle></Rectangle>
+                        <Rectangle></Rectangle>
+                        
                     </Canvas>
                     
                     
