Mouse click status change tileset editor

--- a/Ceriyo.Toolset/Components/TilesetEditorControl.xaml
+++ b/Ceriyo.Toolset/Components/TilesetEditorControl.xaml
@@ -62,7 +62,7 @@
 
                     </Image>
                     
-                    <Canvas Name="cnvTileEditor">
+                    <Canvas Name="cnvTileEditor" MouseDown="Canvas_MouseDown">
                         <Canvas.Background>
                             <DrawingBrush Viewport="0,0,64,32" ViewportUnits="Absolute" TileMode="Tile">
 
@@ -83,15 +83,7 @@
                                 </DrawingBrush.Drawing>
                             </DrawingBrush>
                         </Canvas.Background>
-
-                        <Rectangle></Rectangle>
-                        <Rectangle></Rectangle>
-                        
                     </Canvas>
-                    
-                    
-                    
-                    
                 </Grid>
                     
                     
