Remove module properties control (duplicate), bind property name on module props window for tilesets

--- a/Ceriyo.Toolset/Windows/EditAreaWindow.xaml
+++ b/Ceriyo.Toolset/Windows/EditAreaWindow.xaml
@@ -157,6 +157,7 @@
 							Grid.Row="1" 
 							VerticalAlignment="Top" 
 							ItemsSource="{Binding Tilesets}"
+                            DisplayMemberPath="Name"
 							Width="292"/>
                     </Grid>
                 </TabItem>
